fixed bugs with correct re-rendering of the tree once a nested tree has been expanded then collapsed.

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -190,12 +190,12 @@ td {
 }
 
 .hiddenEdge{
-  stroke: #979797;
+  stroke: #e0dfdf;
   // stroke: url(#mainGradient);
   stroke-width: 2;
   stroke-linecap: round;
 
-  stroke-opacity: 0.3; 
+  stroke-opacity: 1; 
 //  stroke-dasharray: 3px;
  fill:none;
 //  stroke-dasharray: 5,5,3,5,2,5,1,;
